@@ -1,3 +1,2 @@
 Makefile.in
 Makefile
-JavaScriptCore-stamp
